# CppUnitExtension

./: .gitignore  CMakeLists.txt  README
CppUnit/: CMakeLists.txt
Example/: CMakeLists.txt  Reader.cpp  Writer.cpp  Writer.h  WriterC.h  main.cpp
Example/StandardExample/: CMakeLists.txt  StandardExample.cpp  StandardExample.h  main.cpp
Examples/: CMakeLists.txt  README
Examples/Example1-ClassicCppUnitTest/: CMakeLists.txt  Fraction.cpp  FractionTest.cpp  FractionTest.h  README
Examples/Example2-CppUnitTestWithExtension/: CMakeLists.txt  TestClass.cpp  TestClass.h  main.cpp  test-1.in  ute.config  ute.dev.config
Examples/Example2-CppUnitTestWithExtension/tc/: .test.in.swp  test.in
Examples/Example2-CppUnitTestWithExtension/tc/results/: test.exp.unified
Examples/exec/: example2-cppunitwithextension
Extension/: CMakeLists.txt
Extension/include/: CueTestRunner.h  Reader.h  UteTestRunner.h  Writer.h
Extension/src/: CueTestRunner.cpp  Reader.cpp  UteTestRunner.cpp  Writer.cpp
ute/: .ute.config.swp  .ute.sh.swp  ute.config  ute.pl  ute.sh  ute.sub.pm
