# libcppunit_la_LDFLAGS= -no-undefined -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) -release $(LT_RELEASE)
include_directories (include)
add_library (CppUnit
	src/DefaultProtector.cpp
	src/Asserter.cpp
	src/SynchronizedObject.cpp
	src/TextTestResult.cpp
	src/StringTools.cpp
	src/TestPlugInDefaultImpl.cpp
	src/SourceLine.cpp
	src/BeOsDynamicLibraryManager.cpp
	src/XmlOutputter.cpp
	src/XmlOutputterHook.cpp
	src/Exception.cpp
	src/TextTestProgressListener.cpp
	src/ProtectorContext.h
	src/PlugInParameters.cpp
	src/TypeInfoHelper.cpp
	src/TestAssert.cpp
	src/DynamicLibraryManager.cpp
	src/Test.cpp
	src/BriefTestProgressListener.cpp
	src/Protector.cpp
	src/RepeatedTest.cpp
	src/AdditionalMessage.cpp
	src/PlugInManager.cpp
	src/ShlDynamicLibraryManager.cpp
	src/XmlDocument.cpp
	src/TestCase.cpp
	src/TestResult.cpp
	src/TestFailure.cpp
	src/TestRunner.cpp
	src/TestSuccessListener.cpp
	src/ProtectorChain.h
	src/TextTestRunner.cpp
	src/TestComposite.cpp
	src/TestSuiteBuilderContext.cpp
	src/XmlElement.cpp
	src/ProtectorChain.cpp
	src/TestSuite.cpp
	src/TestLeaf.cpp
	src/DefaultProtector.h
	src/TestDecorator.cpp
	src/TestResultCollector.cpp
	src/Message.cpp
	src/TestSetUp.cpp
	src/TestNamer.cpp
	src/TestPath.cpp
	src/UnixDynamicLibraryManager.cpp
	src/TextOutputter.cpp
	src/DynamicLibraryManagerException.cpp
	src/TestFactoryRegistry.cpp
	src/TestCaseDecorator.cpp
	src/CompilerOutputter.cpp
)
