include_directories (${CPPUNITEXTENSION_SOURCE_DIR}/CppUnit/include)
include_directories (${CPPUNITEXTENSION_SOURCE_DIR}/Extension/include)
link_directories (${CPPUNITEXTENSION_SOURCE_DIR}/Extension)
link_directories (${CPPUNITEXTENSION_BINARY_DIR}/CppUnit)
add_executable (example2-cppunitwithextension main.cpp)
target_link_libraries (example2-cppunitwithextension Extension CppUnit)
